version/0.16/_sources/api/solver/_autosummary/settings/phase_3.rst.txt
:orphan:

.. _phase_3:

phase
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.phase_3.phase
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`phase_child <phase_child_3>`


.. rubric:: Included in:

============================================   =======================================

Parent                                                                         Summary

============================================   =======================================
:ref:`exhaust_fan_child <exhaust_fan_child>`       'child_object_type' of exhaust_fan.

============================================   =======================================

